--- a/templates/account/add-savings.html
+++ b/templates/account/add-savings.html
@@ -41,7 +41,7 @@
                         <div class="send-banance">
                             <span class="mdr">Save money</span>
                             <div class="input-area">
-                                <input class="xxlr" placeholder="Enter Amount Save" type="number" name="amount-save" id="amount-send">
+                                <input class="xxlr" placeholder="Enter Amount Save" required type="number" name="amount-save" id="amount-send">
 
                             </div>
                            
