--- a/templates/payment_request/amount-request.html
+++ b/templates/payment_request/amount-request.html
@@ -47,7 +47,7 @@
                         <div class="send-banance">
                             <span class="mdr">You Request</span>
                             <div class="input-area">
-                                <input class="xxlr" placeholder="Enter Amount Request" type="number" name="amount-request" id="amount-request">
+                                <input class="xxlr" placeholder="Enter Amount Request" required type="number" name="amount-request" id="amount-request">
 
                             </div>
                            
