--- a/templates/transfer/pay.html
+++ b/templates/transfer/pay.html
@@ -10,7 +10,7 @@
                     <div class="head-area d-flex align-items-center justify-content-between">
                         <h4>Make a Payment</h4>
                         <div class="icon-area">
-                            <img src="{% static 'assets/images/icon/support-icon.png' %}" alt="icon">
+                            <img src="{% static 'assets1/images/icon/support-icon.png' %}" alt="icon">
                         </div>
                     </div>
                     <div class="row pb-120">
@@ -20,6 +20,16 @@
                                     <img src="{% static 'assets/images/onitsha-logo.png' %}" style="height: 80px; width: 100px;" alt="icon">
                                 </div>
                                 <p class="mdr">To a Recipient’s Aza Account</p>
+                                <span class="mdr">Pay for free</span>
+                            </a>
+                        </div>
+
+                        <div class="col-xxl-3 col-xl-4 col-md-5">
+                            <a href="{% url 'core:search-dollar-account' %}" class="single-item">
+                                <div class="icon-area">
+                                    <img src="{% static 'assets1/images/icon/usd.png' %}" style="height: 80px; width: 100px;" alt="icon">
+                                </div>
+                                <p class="mdr">To a Recipient’s Aza Dollar Account</p>
                                 <span class="mdr">Pay for free</span>
                             </a>
                         </div>
