--- a/templates/transfer/recipient.html
+++ b/templates/transfer/recipient.html
@@ -48,8 +48,12 @@
                             </div>
                             <div class="right">
                                 {% if r.account_type == 'USD' %}
+                                <h6 style="color: red;">USD-account No</h6>
                                 <a href="{% url 'core:amount-dollar-transfer' r.r_number  %}">Choose</a>
                                 {% elif r.account_type == 'NGN' %}
+                                
+                                <h6 style="color: GREEN;">NGN-account No</h6>
+
                                 <a href="{% url 'core:amount-transfer' r.r_number  %}">Choose</a>
                                 {% endif %}
                             </div>
