--- a/templates/transfer/transfer-confirmation.html
+++ b/templates/transfer/transfer-confirmation.html
@@ -123,7 +123,7 @@
                                             <form action="{% url 'core:transfer-process' account.account_number transaction.transaction_id %}" method="POST">
                                                 {% csrf_token %}
                                                 <div class="userInput">
-                                                    <input minlength="4" maxlength="4" name="pin-number" type="text">
+                                                    <input minlength="4" required maxlength="4" name="pin-number" type="text">
                                                 </div>
                                                 <button type="submit" class="mt-60 active">Confirm</button>
                                                 
