--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -98,45 +98,47 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            
                                             {% for s in sender_transaction %}
-                                                <tr data-bs-toggle="modal" data-bs-target="#transactionsMod">
-                                                    <th scope="row">
-                                                        <p>{{s.reciever.kyc.full_name|title}}</p>
-                                                        <p class="mdr">{{s.transaction_type|title}}</p>
-                                                    </th>
-                                                    <td>
-                                                        <p><small>{{s.date|date:"h:i"}}</small></p>
-                                                        <p class="mdr">{{s.date|date:"d M, Y"}}</p>
-                                                    </td>
-                                                    <td>
-                                                        {% if s.status == 'completed' %}
-                                                            <p class="text-success">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                        {% if s.status == 'pending' %}
-                                                            <p class="inprogress">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                        {% if s.status == 'failed' %}
-                                                            <p class="danger">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                        {% if s.status == 'processing' %}
-                                                            <p class="inprogress">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td>
+                                            <tr data-bs-toggle="modal" data-bs-target="#transactionsMod">
+                                                <th scope="row">
+                                                    <p>{{ s.receiver.kyc.full_name|title }}</p>
+                                                    <p class="mdr">{{ s.transaction_type|title }}</p>
+                                                </th>
+                                                <td>
+                                                    <p>{{ s.date|date:"h:i" }}</p>
+                                                    <p class="mdr">{{ s.date|date:"d M, Y" }}</p>
+                                                </td>
+                                                <td>
+                                                    {% if s.status == 'completed' %}
+                                                    <p class="text-success">{{ s.status|title }}</p>
+                                                    {% elif s.status == 'pending' %}
+                                                    <p class="inprogress">{{ s.status|title }}</p>
+                                                    {% elif s.status == 'failed' %}
+                                                    <p class="text-danger">{{ s.status|title }}</p>
+                                                    {% elif s.status == 'processing' %}
+                                                    <p class="inprogress">{{ s.status|title }}</p>
+                                                    {% endif %}
+                                                </td>
+                                                <td>
+                                                    {% if s.transaction_type == 'exchange' %}
+                                                        
+                                                            <p>-&#36;{{ s.amount|intcomma }}</p>
+                                    
+                                                       
+                                                    {% else %}
                                                         {% if s.currency == 'USD' %}
-                                                        <p>-&#36;{{ s.amount|intcomma }}</p>
+                                                            <p>-&#36;{{ s.amount|intcomma }}</p>
                                                         {% else %}
-                                                        <p>-&#8358;{{ s.amount|intcomma }}</p>
+                                                            <p>-&#8358;{{ s.amount|intcomma }}</p>
                                                         {% endif %}
-                                                    </td>
-                                                    <td>
-                                                        <a href="{% url 'core:transaction_detail' s.transaction_id %}" class=""><i class="fas fa-eye"></i></a>
-
-                                                    </td>
-                                                </tr>
+                                                    {% endif %}
+                                                </td>
+                                                
+                                                <td>
+                                                    <a href="{% url 'core:transaction_detail' s.transaction_id %}" class=""><i class="fas fa-eye"></i></a>
+                                                </td>
+                                            </tr>
                                             {% endfor %}
-                                            
                                         </tbody>
                                     </table>
                                 </div>
@@ -154,44 +156,46 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            
                                             {% for s in reciever_transaction %}
-                                                <tr data-bs-toggle="modal" data-bs-target="#transactionsMod">
-                                                    <th scope="row">
-                                                        <p>{{s.sender.kyc.full_name|title}}</p>
-                                                        <p class="mdr">{{s.transaction_type|title}}</p>
-                                                    </th>
-                                                    <td>
-                                                        <p><small>{{s.date|date:"h:i"}}</small></p>
-                                                        <p class="mdr">{{s.date|date:"d M, Y"}}</p>
-                                                    </td>
-                                                    <td>
-                                                        {% if s.status == 'completed' %}
-                                                            <p class="text-success">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                        {% if s.status == 'pending' %}
-                                                            <p class="inprogress">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                        {% if s.status == 'failed' %}
-                                                            <p class="danger">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                        {% if s.status == 'processing' %}
-                                                            <p class="inprogress">{{s.status|title}}</p>
-                                                        {% endif %}
-                                                    </td>
-                                                    <td>
+                                            <tr data-bs-toggle="modal" data-bs-target="#transactionsMod">
+                                                <th scope="row">
+                                                    <p>{{ s.sender.kyc.full_name|title }}</p>
+                                                    <p class="mdr">{{ s.transaction_type|title }}</p>
+                                                </th>
+                                                <td>
+                                                    <p>{{ s.date|date:"h:i" }}</p>
+                                                    <p class="mdr">{{ s.date|date:"d M, Y" }}</p>
+                                                </td>
+                                                <td>
+                                                    {% if s.status == 'completed' %}
+                                                    <p class="text-success">{{ s.status|title }}</p>
+                                                    {% elif s.status == 'pending' %}
+                                                    <p class="inprogress">{{ s.status|title }}</p>
+                                                    {% elif s.status == 'failed' %}
+                                                    <p class="text-danger">{{ s.status|title }}</p>
+                                                    {% elif s.status == 'processing' %}
+                                                    <p class="inprogress">{{ s.status|title }}</p>
+                                                    {% endif %}
+                                                </td>
+                                                <td>
+                                                    {% if s.transaction_type == 'exchange' %}
+                                                        
+                                                            <p>+&#8358;{{ s.amount_exchange|intcomma }}</p>
+                                    
+                                                       
+                                                    {% else %}
                                                         {% if s.currency == 'USD' %}
-                                                        <p>+&#36;{{ s.amount|intcomma }}</p>
+                                                            <p>-&#36;{{ s.amount|intcomma }}</p>
                                                         {% else %}
-                                                        <p>+&#8358;{{ s.amount|intcomma }}</p>
+                                                            <p>-&#8358;{{ s.amount|intcomma }}</p>
                                                         {% endif %}
-                                                    </td>
-                                                    <td>
-                                                        <a href="{% url 'core:transaction_detail' s.transaction_id %}" class=""><i class="fas fa-eye"></i></a>
-                                                    </td>
-                                                </tr>
+                                                    {% endif %}
+                                                </td>
+                                                <td>
+                                                    <a href="{% url 'core:transaction_detail' s.transaction_id %}" class=""><i class="fas fa-eye"></i></a>
+                                                </td>
+                                            </tr>
                                             {% endfor %}
-                                            
                                         </tbody>
                                     </table>
                                 </div>
@@ -328,16 +332,14 @@
                                                         {% endif %}
                                                     </td>
                                                     <td>
-                                                        
-                                                        {% if s.status == "request_sent" %}
-                                                            <a href="{% url 'core:settlement-confirmation' s.sender.account.account_number s.transaction_id %}" class="btn btn-primary"><i class="fas fa-check-circle"></i> Settle</a>
-                                                            <a href="{% url 'core:transaction_detail' s.transaction_id %}" class=" btn btn-danger"> <i class="fas fa-x"></i> Cancel</a>
+                                                        {% if s.status == "request_processing" %}
+                                                        <a href="{% url 'core:delete-reciever' s.sender.account.account_number s.transaction_id %}" class="btn btn-danger"><i class="fas fa-x"></i>Delete</a>
+                                                        {% elif s.status == "request_sent" %}
+                                                        <a href="{% url 'core:settlement-confirmation' s.sender.account.account_number s.transaction_id %}" class="btn btn-primary"><i class="fas fa-check-circle"></i> Settle</a>
+                                                        <a href="{% url 'core:delete-reciever' s.sender.account.account_number s.transaction_id %}" class="btn btn-danger"><i class="fas fa-x"></i> Cancel</a>
+                                                        {% elif s.status == "request_settled" %}
+                                                        <a href="" class="btn btn-success"><i class="fas fa-check-circle"></i> Settled</a>
                                                         {% endif %}
-
-                                                        {% if s.status == "request_settled" %}
-                                                            <a href="" class="btn btn-success"><i class="fas fa-check-circle"></i> Settled</a>
-                                                        {% endif %}
-                                                            
                                                     </td>
                                                 </tr>
                                             {% empty %}
