--- a/templates/include/base.html
+++ b/templates/include/base.html
@@ -171,10 +171,10 @@ English
     <div class="option-inner">
     <div class="others-options d-flex align-items-center">
     <div class="option-item">
-    <a href="login.html" class="optional-btn">Log In</a>
+    <a href="{% url 'userauths:login'%}" class="optional-btn">Log In</a>
     </div>
     <div class="option-item">
-    <a href="register.html" class="default-btn">Register Now</a>
+    <a href="{% url 'userauths:register'%}" class="default-btn">Register Now</a>
     </div>
     </div>
     </div>
